# spotify-np

./: .gitignore  Cargo.toml  README.md  goodbye for now.yaml
.github/scripts/: rename.js
.github/workflows/: build.yml  ci.yaml  linux.yml  mac.yml  windows-build.yml  windows.yml
package/: config.json
package/themes/default/: index.html
src/: main.rs
