[package]
name = "spotify-np"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
spotify_info = "0.5.0"
warp = "0.3.2"
reqwest = "0.11.11"
futures = "0.3"
directories = "4.0.1"
notify = "4.0.17"
serde_json = "1.0.83"
serde = { version = "1.0.143", features = ["derive"] }
serde_derive = "1.0.143"
futures-util = "0.3.23"
